chore: Upgrade - Localizable Sample to run with latest uno
Revert "chore: Upgrade - Localizable Sample to run with latest uno and latest VS"

This reverts commit 5c4656e04b3e5385ef4fcb0dee0f80cac8fcc5be.

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

This reverts commit 752573997a077e95e205cb512f22139aaefbf4c0.

chore: Upgrade - Toy Car Sample to run with latest uno and latest VS 2022

chore: Upgrade - Localizable Sample to run with latest uno and latest VS 2022

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localizable Sample to run with latest uno and latest VS

chore: Upgrade - Localiz

--- a/UI/LocalizationSamples/Localization/UnoLocalization.Droid/UnoLocalization.Droid.csproj
+++ b/UI/LocalizationSamples/Localization/UnoLocalization.Droid/UnoLocalization.Droid.csproj
@@ -36,6 +36,7 @@
     <EnableLLVM>false</EnableLLVM>
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
+    <MandroidI18n />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>portable</DebugType>
@@ -47,12 +48,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
-    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
+    <AndroidLinkMode>None</AndroidLinkMode>
     <AndroidCreatePackagePerAbi>true</AndroidCreatePackagePerAbi>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
-    <AotAssemblies>true</AotAssemblies>
-    <EnableLLVM>true</EnableLLVM>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
@@ -64,12 +67,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
-    <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.35" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream">
+      <Version>2.2.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.Buffers">
+      <Version>4.5.1</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.Core.Extensions.Logging">
+      <Version>4.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.Core.Extensions.Logging.Singleton">
+      <Version>4.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.UI" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+    <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.36" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
