--- a/UI/LocalizationSamples/Localization/UnoLocalization.Skia.Gtk/UnoLocalization.Skia.Gtk.csproj
+++ b/UI/LocalizationSamples/Localization/UnoLocalization.Skia.Gtk/UnoLocalization.Skia.Gtk.csproj
@@ -14,11 +14,12 @@
     <UpToDateCheckInput Include="..\UnoLocalization.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.UI.Skia.Gtk" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
+    <PackageReference Include="Uno.UI.Skia.Gtk" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
   </ItemGroup>
   <Import Project="..\UnoLocalization.Shared\UnoLocalization.Shared.projitems" Label="Shared" />
 </Project>
