--- a/UI/LocalizationSamples/Localization/UnoLocalization.Skia.Tizen/UnoLocalization.Skia.Tizen.csproj
+++ b/UI/LocalizationSamples/Localization/UnoLocalization.Skia.Tizen/UnoLocalization.Skia.Tizen.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>tizen50</TargetFramework>
     <OutputType>Exe</OutputType>
-    <DefineConstants>$(DefineConstants);__TIZEN__;</DefineConstants>
+    <DefineConstants>$(DefineConstants);__TIZEN__;</DefineConstants>	
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="lib\" />
@@ -18,12 +18,27 @@
     <UpToDateCheckInput Include="..\UnoLocalization.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="SkiaSharp.Views" Version="2.80.3" />
-    <PackageReference Include="Uno.UI.Skia.Tizen" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="HarfBuzzSharp" Version="2.8.2.3" />
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.Tizen" Version="2.8.2.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.2.1" />
+    <PackageReference Include="SkiaSharp" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Tizen" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.Views" Version="2.88.3" />
+    <PackageReference Include="System.Buffers" Version="4.5.1" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
+    <PackageReference Include="Uno.Core.Extensions.Logging" Version="4.0.1" />
+    <PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+    <PackageReference Include="Uno.Foundation.Logging" Version="4.5.14" />    
+    <PackageReference Include="Uno.UI" Version="4.5.14" />    
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.Runtime.Skia.Tizen" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.Skia.Tizen" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+    <PackageReference Include="Uno.Wasm.WebSockets" Version="1.1.0" />
   </ItemGroup>
   <Import Project="..\UnoLocalization.Shared\UnoLocalization.Shared.projitems" Label="Shared" />
 </Project>
