--- a/UI/LocalizationSamples/Localization/UnoLocalization.Wasm/UnoLocalization.Wasm.csproj
+++ b/UI/LocalizationSamples/Localization/UnoLocalization.Wasm/UnoLocalization.Wasm.csproj
@@ -36,14 +36,16 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.0.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Uno.Core.Extensions.Logging" Version="4.0.1" />
+    <PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" />
   </ItemGroup>
   <Import Project="..\UnoLocalization.Shared\UnoLocalization.Shared.projitems" Label="Shared" Condition="Exists('..\UnoLocalization.Shared\UnoLocalization.Shared.projitems')" />
 </Project>
