chore: Upgrade - SplashScreen Sample to run with latest uno and latest
chore: Upgrade - SplashScreen Sample to run with latest uno and latest

This reverts commit 752573997a077e95e205cb512f22139aaefbf4c0.

chore: Upgrade - SplashScreen Sample to run with latest uno and latest VS 2022

chore: Upgrade - SplashScreen Sample to run with latest uno and latest

chore: Upgrade - SplashScreen Sample to run with latest uno and latest VS

chore: Upgrade - SplashScreen Sample to run with latest uno and latest

chore: Upgrade - SplashScreen Sample to run with latest uno and latest VS 2022

--- a/UI/SplashScreenSample/SplashScreenSample.iOS/SplashScreenSample.iOS.csproj
+++ b/UI/SplashScreenSample/SplashScreenSample.iOS/SplashScreenSample.iOS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProjectGuid>328a71bf-84ce-4650-81f6-62e015a8bd7e</ProjectGuid>
+    <ProjectGuid>{328A71BF-84CE-4650-81F6-62E015A8BD7E}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
     <RootNamespace>SplashScreenSample</RootNamespace>
@@ -118,7 +118,7 @@
     <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Uno.Extensions.Logging.OSLog " Version="1.0.1" />
+    <PackageReference Include="Uno.Extensions.Logging.OSLog " Version="1.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Contents.json">
@@ -146,11 +146,7 @@
       <Visible>false</Visible>
     </ImageAsset>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Media" Visible="false" />
-    <Folder Include="Media\AppIcons" Visible="false" />
-    <Folder Include="Media\LaunchImages" Visible="false" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="..\SplashScreenSample.Shared\SplashScreenSample.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
