chore: Upgrade - StatusBarColor Sample to run with latest uno and latest…
This reverts commit 752573997a077e95e205cb512f22139aaefbf4c0.

chore: Upgrade - StatusBarColor Sample to run with latest uno and latest VS 2022

--- a/UI/StatusBarThemeColor/StatusBarColorSample.UWP/StatusBarColorSample.Uwp.csproj
+++ b/UI/StatusBarThemeColor/StatusBarColorSample.UWP/StatusBarColorSample.Uwp.csproj
@@ -11,15 +11,15 @@
       <Version>6.2.11</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml" Version="2.6.2" />
-    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Uno.UI" Version="4.5.12" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>0a588046-fc03-48b1-91fe-444c4ce107a5</ProjectGuid>
+    <ProjectGuid>{0A588046-FC03-48B1-91FE-444C4CE107A5}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>StatusBarColorSample</RootNamespace>
