--- a/UI/AdvancedXBind/AdvancedXBind.Mobile/AdvancedXBind.Mobile.csproj
+++ b/UI/AdvancedXBind/AdvancedXBind.Mobile/AdvancedXBind.Mobile.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst;</TargetFrameworks>
     <SingleProject>true</SingleProject>
@@ -39,7 +39,9 @@
         <MtouchExtraArgs>$(MtouchExtraArgs) --setenv=MONO_GC_PARAMS=soft-heap-limit=512m,nursery-size=64m,evacuation-threshold=66,major=marksweep,concurrent-sweep</MtouchExtraArgs>
         <!-- https://github.com/xamarin/xamarin-macios/issues/14812 -->
         <MtouchExtraArgs>$(MtouchExtraArgs) --marshal-objectivec-exceptions:disable</MtouchExtraArgs>
-      </PropertyGroup>
+		<MtouchExtraArgs>$(MtouchExtraArgs) --registrar:static</MtouchExtraArgs>
+
+	  </PropertyGroup>
       <ItemGroup>
         <PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
       </ItemGroup>
