--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.UWP/UnoGoodReads.UWP.csproj
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.UWP/UnoGoodReads.UWP.csproj
@@ -142,6 +142,9 @@
     <Prefer32Bit>true</Prefer32Bit>
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
