--- a/UI/UnoMaterialSample/UnoMaterialSample.Skia.Gtk/UnoMaterialSample.Skia.Gtk.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Skia.Gtk/UnoMaterialSample.Skia.Gtk.csproj
@@ -35,9 +35,11 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="Uno.UI.Lottie" Version="4.5.14" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
     <PackageReference Include="Uno.UI.Runtime.Skia.Gtk" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.Skia.Gtk" Version="4.5.14" />
     <PackageReference Include="Uno.XamlMerge.Task" Version="1.1.0-dev.12" />
+	  
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" />
 </Project>
