chore: Upgrade - Material Sample to run with latest uno and latest VS

--- a/reference/Uno.Extensions.Commerce/Commerce.macOS/Commerce.macOS.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.macOS/Commerce.macOS.csproj
@@ -51,7 +51,7 @@
     <CreatePackage>true</CreatePackage>
     <EnablePackageSigning>false</EnablePackageSigning>
     <IncludeMonoRuntime>true</IncludeMonoRuntime>
-    <IncludeWinUIExtensions>false</IncludeWinUIExtensions>
+    <IncludeWinUIExtensions>true</IncludeWinUIExtensions>
     <UseSGen>true</UseSGen>
     <UseRefCounting>true</UseRefCounting>
     <LinkMode>SdkOnly</LinkMode>
