chore: Removed unecessary files and adjusted the calculator record.

--- a/UI/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -3,5 +3,8 @@
 		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 	<Import Project="..\Extensions.props" />
+	<ItemGroup>
+	  <SourceGeneratorInput Remove="Business\StatefulViewModel.cs" />
+	</ItemGroup>
 
 </Project>
