chore: TabView Sample - Update to net6
chore: TabView Sample - Update to net6

chore: adjusted styles

--- a/UI/WCTTabView/TabViewSample/TabViewSample.iOS/TabViewSample.iOS_old.csproj
+++ b/UI/WCTTabView/TabViewSample/TabViewSample.iOS/TabViewSample.iOS_old.csproj
@@ -156,4 +156,9 @@
   <ItemGroup />
   <Import Project="..\TabViewSample.Shared\TabViewSample.Shared.projitems" Label="Shared" Condition="Exists('..\TabViewSample.Shared\TabViewSample.Shared.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties entitlements_1plist__JsonSchema="https://citation-file-format.github.io/1.2.0/schema.json" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
