--- a/UI/SimpleCalculator/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
@@ -9,8 +9,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.4.13" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.4.13" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.5.14" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -24,5 +24,14 @@
 	  <Content Include="Assets\Fonts\Material\Roboto-Medium.ttf" />
 	  <Content Include="Assets\Fonts\Material\Roboto-Regular.ttf" />
 	  <Content Include="Assets\Fonts\uno-fluentui-assets.ttf" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
+	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+	  <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.1-preview.79" />
+	  <PackageReference Include="SkiaSharp.Skottie" Version="2.88.1-preview.79" />
 	</ItemGroup>
 </Project>
