--- a/UI/SimpleCalculator/SimpleCalculator.UITests/SimpleCalculator.UITests.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator.UITests/SimpleCalculator.UITests.csproj
@@ -13,4 +13,11 @@
 		<PackageReference Include="Uno.UITest.Helpers" Version="1.1.0-dev.32" />
 		<PackageReference Include="Xamarin.UITest" Version="3.2.6" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
+	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+	</ItemGroup>
 </Project>
