--- a/UI/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -6,5 +6,11 @@
 	<ItemGroup>
 	  <SourceGeneratorInput Remove="Business\StatefulViewModel.cs" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
+	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+	</ItemGroup>
 
 </Project>
