--- a/UI/SimpleCalculator/SimpleCalculator.Skia.Gtk/SimpleCalculator.Skia.Gtk.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator.Skia.Gtk/SimpleCalculator.Skia.Gtk.csproj
@@ -21,11 +21,19 @@
 		<Content Include="Assets\Fonts\Roboto-Regular.ttf" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.4.13" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.4.13" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.5.14" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\SimpleCalculator\SimpleCalculator.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
+	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+	  <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.1-preview.79" />
+	  <PackageReference Include="SkiaSharp.Skottie" Version="2.88.1-preview.79" />
 	</ItemGroup>
 	<Import Project="..\Extensions.props" />
 	<Import Project="..\SimpleCalculator.UI\SimpleCalculator.UI.projitems" Label="Shared" />
