--- a/UI/SimpleCalculator/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
@@ -16,4 +16,11 @@
 	<ItemGroup>
 		<ProjectReference Include="..\SimpleCalculator\SimpleCalculator.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
+	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
+	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+	</ItemGroup>
 </Project>
