chore: Update dependencies + add Uno Markup references

--- a/UI/SimpleCalculator/SimpleCalculator.Skia.Linux.FrameBuffer/SimpleCalculator.Skia.Linux.FrameBuffer.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator.Skia.Linux.FrameBuffer/SimpleCalculator.Skia.Linux.FrameBuffer.csproj
@@ -14,6 +14,8 @@
 		<UpToDateCheckInput Include="..\SimpleCalculator.UI\**\*.xaml" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="Uno.Toolkit.WinUI.Material.Markup" Version="0.1.0-dev.96" />
+		<PackageReference Include="Uno.WinUI.Markup" Version="0.1.0-dev.96" />
 		<PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.5.14" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
 	</ItemGroup>
@@ -25,8 +27,8 @@
 	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
 	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
 	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
-	  <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.1-preview.79" />
-	  <PackageReference Include="SkiaSharp.Skottie" Version="2.88.1-preview.79" />
+	  <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
 	</ItemGroup>
 	<Import Project="..\Extensions.props" />
 	<Import Project="..\SimpleCalculator.UI\SimpleCalculator.UI.projitems" Label="Shared" />
