chore: WTCDataTreeTab Sample - Update to net6
chore: WTCDataTreeTab Sample - Update to net6

chore: WTCDataTreeTab Sample - Update to net6

chore: WTCDataTreeTab Sample - Update to net6

chore: WTCDataTreeTab Sample - Update to net6

chore: WTCDataTreeTab Sample - Update to net6

chore: android moved

chore: WTCDataTreeTab Sample - Update to net6

chire: iOS

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf.Host/WCTDataTreeTabSample.Skia.Wpf.Host.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf.Host/WCTDataTreeTabSample.Skia.Wpf.Host.csproj
@@ -1,19 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
+	<TargetFramework>-windows</TargetFramework>  
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
+	<TargetFramework>net6.0-windows</TargetFramework>
+    <UseWPF>true</UseWPF>	  
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Uno.Material" Version="2.3.0" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls" Version="7.1.11" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid" Version="7.1.11" />
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.5.12" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
   </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Uno" Version="2.88.3" />
+		<PackageReference Include="Uno.Material" Version="2.3.0" />
+		<PackageReference Include="Uno.Toolkit.UI" Version="2.3.0" />
+		<PackageReference Include="Uno.Toolkit.UI.Material" Version="2.3.0" />
+		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls">
+			<Version>7.1.11</Version>
+		</PackageReference>
+		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid">
+			<Version>7.1.11</Version>
+		</PackageReference>
+		<PackageReference Include="Uno.UI" Version="4.5.14" />
+		<PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+	</ItemGroup>	
   <ItemGroup>
     <Content Include="Assets\Fonts\uno-fluentui-assets.ttf" />
   </ItemGroup>
