--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Tizen/WCTDataTreeTabSample.Skia.Tizen.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Tizen/WCTDataTreeTabSample.Skia.Tizen.csproj
@@ -30,10 +30,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="SkiaSharp.Views" Version="2.88.3" />
-    <PackageReference Include="Uno.UI.Lottie" Version="4.5.0-dev.645" />
-    <PackageReference Include="Uno.UI.Skia.Tizen" Version="4.5.12" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
+    <PackageReference Include="Uno.UI.Lottie" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.Skia.Tizen" Version="4.5.14" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
   </ItemGroup>
   <Import Project="..\WCTDataTreeTabSample.Shared\WCTDataTreeTabSample.Shared.projitems" Label="Shared" />
 </Project>
