--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.macOS/Info.plist
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.macOS/Info.plist
@@ -1,17 +1,15 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleName</key>
 	<string>WCTDataTreeTabSample.macOS</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.WCTDataTreeTabSample-macOS</string>
+	<string>com.companyname.WCTDataTreeTabSample.macOS</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>LSMinimumSystemVersion</key>
-	<string>10.11</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -24,9 +22,9 @@
 	<string>${AuthorCopyright:HtmlEncode}</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSMainStoryboardFile</key>
+	<string>Main</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
-	<key>ATSApplicationFontsPath</key>
-	<string>Fonts/uno-fluentui-assets.ttf</string>
 </dict>
 </plist>
