--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf.Host/WCTDataTreeTabSample.Skia.Wpf.Host.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf.Host/WCTDataTreeTabSample.Skia.Wpf.Host.csproj
@@ -5,7 +5,8 @@
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
 	<TargetFramework>net6.0-windows</TargetFramework>
-    <UseWPF>true</UseWPF>	  
+    <UseWPF>true</UseWPF>
+	<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>  
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Uno.Material" Version="2.3.0" />
