chore: WTCDataTreeTab Sample - Update to net6

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf.Host/WCTDataTreeTabSample.Skia.Wpf.Host.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf.Host/WCTDataTreeTabSample.Skia.Wpf.Host.csproj
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
-  <PropertyGroup>
-	<TargetFramework>-windows</TargetFramework>  
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>	
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
 	<TargetFramework>net6.0-windows</TargetFramework>
