fix: Relocated font's files to the proper folder

--- a/UI/SimpleCalculator/SimpleCalculator.Skia.Gtk/SimpleCalculator.Skia.Gtk.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator.Skia.Gtk/SimpleCalculator.Skia.Gtk.csproj
@@ -13,12 +13,18 @@
 	<ItemGroup>
 		<UpToDateCheckInput Include="..\SimpleCalculator.UI\**\*.xaml" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Assets\Fonts\Material\Roboto-Light.ttf" />
+	  <None Remove="Assets\Fonts\Material\Roboto-Medium.ttf" />
+	  <None Remove="Assets\Fonts\Material\Roboto-Regular.ttf" />
+	  <None Remove="Assets\Fonts\Material\uno-fluentui-assets.ttf" />
+	</ItemGroup>
 
 	<ItemGroup>
-		<Content Include="Assets\Fonts\uno-fluentui-assets.ttf" />
-		<Content Include="Assets\Fonts\Roboto-Light.ttf" />
-		<Content Include="Assets\Fonts\Roboto-Medium.ttf" />
-		<Content Include="Assets\Fonts\Roboto-Regular.ttf" />
+		<Content Include="Assets\Fonts\Material\Roboto-Light.ttf" />
+		<Content Include="Assets\Fonts\Material\Roboto-Medium.ttf" />
+		<Content Include="Assets\Fonts\Material\Roboto-Regular.ttf" />
+		<Content Include="Assets\Fonts\Material\uno-fluentui-assets.ttf" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Uno.Toolkit.WinUI.Material.Markup" Version="0.1.0-dev.96" />
