chore: Keyboard support

--- a/UI/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -12,5 +12,8 @@
 	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
 	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
 	</ItemGroup>
+	<ItemGroup>
+	  <SourceGeneratorInput Remove="Business\KeyValues.cs" />
+	</ItemGroup>
 
 </Project>
