chore: uno nuget packages to version 4.6.18

--- a/UI/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
@@ -45,7 +45,7 @@
 		<PackageReference Include="Uno.Toolkit.WinUI.Material.Markup" Version="0.1.0-dev.105" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI" Version="4.5.14" />
+		<PackageReference Include="Uno.WinUI" Version="4.6.18" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="0.1.0-dev.105" />
 	</ItemGroup>
 
@@ -76,7 +76,7 @@
 	  <PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
 	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
 	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
-	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
 	</ItemGroup>
 	<Import Project="..\Extensions.props" />
 	<Import Project="..\SimpleCalculator.UI\SimpleCalculator.UI.projitems" Label="Shared" />
