ci: Don't incude uno.ui binaries in the viewmodels project

--- a/UI/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/UI/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -4,16 +4,20 @@
 	</PropertyGroup>
 	<Import Project="..\Extensions.props" />
 	<ItemGroup>
-	  <SourceGeneratorInput Remove="Business\StatefulViewModel.cs" />
+		<SourceGeneratorInput Remove="Business\StatefulViewModel.cs" />
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
-	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
-	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
-	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
+
+		<!-- Required until https://github.com/unoplatform/uno/issues/10302 is fixed -->
+		<PackageReference Include="Uno.WinUI" Version="4.6.18" ExcludeAssets="All" />
+	
+		<PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
+		<PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
+		<PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
+		<PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
 	</ItemGroup>
 	<ItemGroup>
-	  <SourceGeneratorInput Remove="Business\KeyValues.cs" />
+		<SourceGeneratorInput Remove="Business\KeyValues.cs" />
 	</ItemGroup>
 
 </Project>
