fix: canary build
chore: fix build

fix: sample calculator build

--- a/reference/Uno.Extensions.Commerce/Commerce.macOS/Commerce.macOS.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.macOS/Commerce.macOS.csproj
@@ -93,6 +93,9 @@
     </PackageReference>
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
     <PackageReference Include="Uno.WinUI" Version="4.5.14" />
+    <PackageReference Include="Uno.WinUI.Lottie">
+      <Version>4.6.18</Version>
+    </PackageReference>
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
