--- a/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -19,7 +19,9 @@
 		<SelfContained>true</SelfContained>
 		<DefaultLanguage>en</DefaultLanguage>
 	</PropertyGroup>
-
+	<PropertyGroup>
+		<RollForward>LatestMajor</RollForward>
+	</PropertyGroup>
 	<ItemGroup>
 	  <Content Include="Images\LockScreenLogo.scale-200.png" />
 	  <Content Include="Images\SplashScreen.scale-100.png" />
@@ -32,8 +34,7 @@
 	  <Content Include="Images\Square44x44Logo.targetsize-24_altform-unplated.png" />
 	  <Content Include="Images\StoreLogo.png" />
 	  <Content Include="Images\Wide310x150Logo.scale-200.png" />
-	</ItemGroup>
-	
+	</ItemGroup>	
 	<ItemGroup>
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
@@ -48,7 +49,6 @@
 		<PackageReference Include="Uno.WinUI" Version="4.6.18" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="0.1.0-dev.105" />
 	</ItemGroup>
-
 	<!-- Defining the "Msix" ProjectCapability here allows the Single-project MSIX Packaging
        Tools extension to be activated for this project even if the Windows App SDK Nuget
        package has not yet been restored -->
@@ -77,7 +77,7 @@
 	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
 	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
 	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
-	</ItemGroup>
+	</ItemGroup>	
 	<Import Project="..\Extensions.props" />
 	<Import Project="..\SimpleCalculator.UI\SimpleCalculator.UI.projitems" Label="Shared" />
 </Project>
