--- a/reference/Uno.Extensions.Commerce/Commerce.iOS/Commerce.iOS.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.iOS/Commerce.iOS.csproj
@@ -118,6 +118,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.WinUI" Version="4.5.14" />
+    <PackageReference Include="Uno.WinUI.Lottie">
+      <Version>4.6.18</Version>
+    </PackageReference>
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
