chore: fix update sample calculator

--- a/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -48,7 +48,9 @@
 		<PackageReference Include="Uno.WinUI" Version="4.6.18" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="0.1.0-dev.105" />
 	</ItemGroup>
-
+	<PropertyGroup>
+		<RollForward>LatestMajor</RollForward>
+	</PropertyGroup>
 	<!-- Defining the "Msix" ProjectCapability here allows the Single-project MSIX Packaging
        Tools extension to be activated for this project even if the Windows App SDK Nuget
        package has not yet been restored -->
